syntax = 'proto3';
package topology_requests;

import "topology.proto";

option java_package = "io.camunda.zeebe.dynamic.config.protocol";

message AddMembersRequest {
  repeated string memberIds = 1;
  bool dryRun = 2;
}

message RemoveMembersRequest {
  repeated string memberIds = 1;
  bool dryRun = 2;
}

message JoinPartitionRequest {
  string memberId = 1;
  int32 partitionId = 2;
  int32 priority = 3;
  bool dryRun = 4;
}

message PurgeRequest {
  bool dryRun = 1;
}

message LeavePartitionRequest {
  string memberId = 1;
  int32 partitionId = 2;
  bool dryRun = 3;
}

message BrokerScaleRequest {
  repeated string memberIds = 1;
  bool dryRun = 2;
  optional uint32 newReplicationFactor = 3;
}

message ClusterScaleRequest {
  optional uint32 newClusterSize = 1;
  optional uint32 newPartitionCount = 2;
  optional uint32 newReplicationFactor = 3;
  bool dryRun = 4;
}

message ClusterPatchRequest {
  repeated string membersToAdd = 1;
  repeated string membersToRemove = 2;
  optional uint32 newPartitionCount = 3;
  optional uint32 newReplicationFactor = 4;
  bool dryRun = 5;
  optional topology_protocol.PartitionsDistribution newPartitionsDistribution = 6;
}

message ForceRemoveBrokersRequest {
  repeated string membersToRemove = 1;
  bool dryRun = 2;
}

message ReassignAllPartitionsRequest {
  // The ids of the brokers to which all partitions should be re-distributed
  repeated string memberIds = 1;
  bool dryRun = 2;
}

message ExporterDisableRequest {
  string exporterId = 1;
  bool dryRun = 2;
}

message ExporterEnableRequest {
  string exporterId = 1;
  optional string initializeFrom = 2;
  bool dryRun = 3;
}

message CancelTopologyChangeRequest {
  int64 changeId = 1;
}

message TopologyChangeResponse {
  int64 changeId = 1;
  map<string, topology_protocol.MemberState> currentTopology = 2;
  map<string, topology_protocol.MemberState> expectedTopology = 3;
  repeated topology_protocol.TopologyChangeOperation plannedChanges = 4;
}

message Response {
  oneof response {
    ErrorResponse error = 1;
    TopologyChangeResponse topologyChangeResponse = 2;
    topology_protocol.ClusterTopology clusterTopology = 3;
  }
}

message ErrorResponse {
  ErrorCode errorCode = 1;
  string errorMessage = 2;
}

enum ErrorCode {
  INVALID_REQUEST = 0;
  OPERATION_NOT_ALLOWED = 1;
  CONCURRENT_MODIFICATION = 2;
  INTERNAL_ERROR = 3;
}
